--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: devlopr
+title: Brandon Beckett
 subtitle: A Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "http://www.branbeckett.com" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -13,27 +13,27 @@ urls:
       url: /blog
     - text: Gallery
       url: /gallery
-    - text: Shop
-      url : /shop
+    # - text: Shop
+    #   url : /shop
     - text: Contact Me
       url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+    # - text: Styleguide
+    #   url: /styleguide
+    # - text: Get Started
+    #   url: /get-started
 
 # Edit these details
 
 author_logo: profile.png
 author: Brandon Beckett
-author_bio: Hi, my name is John Doe. I'm building this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author_bio: Hi, my name is Brandon Beckett.
+author_email: "bb@branbeckett.com"
+author_location: Berlin, Germany
+author_website_url: "http://www.branbeckett.com"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
 
 author_work_experiences:
-            - company_name: Google
+            - company_name: Coas Books, Inc.
               company_logo: google.png
               company_url: https://google.com
               designation: Software Engineer
@@ -44,14 +44,14 @@ author_work_experiences:
               company_url: https://microsoft.com
               designation: Azure Developer
               description: Worked on various Azure Cloud Products
-              visibility: true
+              visibility: false
 
 author_education_details:
               - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
+                college_name: NMSU
+                college_url: https://www.nmsu.edu
                 college_degree: CS Engineer
-                description: Bachelor of Technology
+                description: Bachelor of Business Administration
                 visibility: true
 
 author_project_details:
@@ -67,30 +67,30 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: branbeckett
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: BranBeckett
+github_username:  branBeckett
+# facebook_username: johndoe
+linkedin_username: brandonbeckett
+# behance_username: johndoe
+instagram_username: branbeckett
+medium_username: brandonbeckett
+# telegram_username: johndoe
+# dribbble_username: johndoe
+# flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-hyvor_talk_website_id: 476
+# hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+# wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: bb@branbeckett.com
 
 # syntax highlighter
 markdown: kramdown
@@ -124,8 +124,8 @@ paginate_path: "/blog/page/:num/"
 #     category: '/category/:name/'
 
 # Shop
-collections:
- - products
+# collections:
+#  - products
 
 # Gallery
 defaults:
