--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Brandon Beckett
+title: devlopr
 subtitle: A Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "http://www.branbeckett.com" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -25,15 +25,15 @@ urls:
 # Edit these details
 
 author_logo: profile.png
-author: Brandon Beckett
-author_bio: Hi, my name is Brandon Beckett.
-author_email: "bb@branbeckett.com"
-author_location: Berlin, Germany
-author_website_url: "http://www.branbeckett.com"
+author: John Doe
+author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
+author_email: "mail@sujaykundu.com"
+author_location: India
+author_website_url: "https://sujaykundu.com"
 typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
 
 author_work_experiences:
-            - company_name: Coas Books, Inc.
+            - company_name: Google
               company_logo: google.png
               company_url: https://google.com
               designation: Software Engineer
@@ -44,14 +44,14 @@ author_work_experiences:
               company_url: https://microsoft.com
               designation: Azure Developer
               description: Worked on various Azure Cloud Products
-              visibility: false
+              visibility: true
 
 author_education_details:
               - college_logo: mit.png
-                college_name: NMSU
-                college_url: https://www.nmsu.edu
+                college_name: MIT
+                college_url: https://mit.org
                 college_degree: CS Engineer
-                description: Bachelor of Business Administration
+                description: Bachelor of Technology
                 visibility: true
 
 author_project_details:
@@ -67,30 +67,30 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: BranBeckett
-github_username:  branBeckett
-# facebook_username: johndoe
-linkedin_username: brandonbeckett
-# behance_username: johndoe
-instagram_username: branbeckett
-medium_username: brandonbeckett
-# telegram_username: johndoe
-# dribbble_username: johndoe
-# flickr_username: johndoe
+twitter_username: johndoe
+github_username:  sujaykundu777
+facebook_username: johndoe
+linkedin_username: johndoe
+behance_username: johndoe
+instagram_username: johndoe
+medium_username: johndoe
+telegram_username: johndoe
+dribbble_username: johndoe
+flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
 # disqus_shortname: sujay-kundu
-# hyvor_talk_website_id: 476
+hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
-# wakatime_username: sujaykundu777
+wakatime_username: sujaykundu777
 
 # mailchimp embedded form url (newsletter):
-# mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: bb@branbeckett.com
+formspree_email: johndoe@gmail.com
 
 # syntax highlighter
 markdown: kramdown
